Add scaffolding for the site.

--- a/env.dist
+++ b/env.dist
@@ -25,13 +25,20 @@ SITE_SERVER=
 # be a random value.
 DJANGO_SECRET_KEY=
 
+# List of allowed hostnames/IP addresses with which it should be
+# possible to access the server. Should be in the format
+#
+#       ALLOWED_HOSTS=$hostname_1,$hostname_2,...
+#
+ALLOWED_HOSTS=localhost
+
 #--------------------------------------------------
 # Database params
 #--------------------------------------------------
 
 # Database engine to use
-# Options: mysql|sqlite3
-DATABASE_ENGINE=mysql
+# Options: sqlite3|mysql
+DATABASE_ENGINE=sqlite3
 
 # Parameters to pass to the MariaDB container on startup.
 # Only applicable if DATABASE_ENGINE=mysql
