Add a custom User type to the research-assistant app. Make some fixes to both the settings.py (src/encryption_compendium/settings.py) and .travis.yml so that the app runs correctly, and can be adequately tested via Travis CI.
Squashed commit of the following:

commit 764614e9155caf629033c786ac155084d654ea93
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 22:06:58 2020 -0700

    Add a step in the test script to check whether or not 'python3' is a defined command. If it is, we use it to run the following commands; otherwise, we use 'python'.

commit 5324dd11a0bd5ebf660ef06cb93a873ccdf5a512
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 21:52:00 2020 -0700

    Use 'python3' instead of 'python' in the script so that we can run tests on OSX.

commit 32e72e186215c2a6ebb001e9ecb2c1829f42d9f2
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 21:42:20 2020 -0700

    Stop install black with the --user flag in the code formatting checks.

commit ebed06eb0847788e8a5b210b7a8d20f319a9d89e
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 21:39:21 2020 -0700

    Create migrations directory for the research_assistant app.

commit e48e5d5cb7096344782ebac0294e558dd2a7e1a7
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 21:26:41 2020 -0700

    Add makemigrations step in the .travis.yml script.

commit 5dce3694e031da9ae3b9da9b018d77aa8c5fabb9
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 21:19:09 2020 -0700

    Add --run-syncdb flag when initializing the database in Travis.

commit 95a4378f0d300197747ac00de88dba0f98a856f8
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Tue Jan 21 21:13:35 2020 -0700

    Fix error that would arise (incorrectly) when DEBUG was False, whether or not DJANGO_SECRET_KEY was defined

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,47 +16,42 @@ jobs:
   include:
     ### Linux tests
     - stage: "Django unit/functional tests"
-      name: "Django tests (Linux) (Python 3.6)"
       os: linux
       python: 3.6
     - stage:
-      name: "Django tests (Linux) (Python 3.7)"
       os: linux
       python: 3.7
     - stage:
-      name: "Django tests (Linux) (Python 3.8)"
       os: linux
       python: 3.8
     - stage:
-      name: "Django tests (Linux) (Python nightly)"
       os: linux
       python: nightly
 
-    ### OSX tests
+    ### Code formatting tests. Ensure that any code committed to
+    ### the repository is consistent with formatting guidelines
+    ### set using Black.
+    - stage: "Code formatting check"
+      os: linux
+      python: 3.7
+      install:
+        - pip3 install --upgrade pip
+        - pip3 install black
+      script:
+        - find ./src -type f -name "*.py" | xargs black --check --diff
+
+    ### OSX and Windows tests
+    ### Note: these come last because none of these checks cause the build
+    ### to fail.
+
+    # OSX
     - stage: "Non-linux Django tests"
-      name: "Django tests (OSX) (Python 3.6)"
       os: osx
       osx_image: xcode11.2
-      python: 3.6
-    - stage:
-      name: "Django tests (OSX) (Python 3.7)"
-      os: osx
-      osx_image: xcode11.2
-      python: 3.7
-    - stage:
-      name: "Django tests (OSX) (Python 3.8)"
-      os: osx
-      osx_image: xcode11.2
-      python: 3.8
-    - stage:
-      name: "Django tests (OSX) (Python nightly)"
-      os: osx
-      osx_image: xcode11.2
-      python: nightly
+      language: shell
 
-    ### Windows tests
+    # Windows
     - stage:
-      name: "Django tests (Windows) (Python 3.8)"
       os: windows
       language: shell
       before_install:
@@ -70,6 +65,9 @@ install:
   - pip3 install selenium
 
 script:
-  - export DJANGO_SECRET_KEY=$(python3 -c "import base64 as b, secrets as s; print(b.b64encode(s.token_bytes()).decode('utf-8'))")
+  - export DJANGO_SECRET_KEY="$(head -c 40 /dev/random | base64)"
+  - if [ $(which python3) ]; then export PY=python3; else export PY=python; fi
   - cd src
-  - python manage.py test
+  - $PY manage.py makemigrations
+  - $PY manage.py migrate --run-syncdb
+  - $PY manage.py test
