Make some fixes to the .travis.yml so that code coverage reports now reflect the true coverage achieved by the tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -175,6 +175,7 @@ jobs:
         - wget "$URL" -O geckodriver.tar.gz
         - tar xf geckodriver.tar.gz && rm geckodriver.tar.gz
         - mv geckodriver ~/.local/bin/geckodriver
+        - export TEST_FLAGS=""
       after_success:
         - $PY -m codecov
 
