Set DEVELOPMENT=no as the default in the Travis CI tests so that we're getting a little closer to what a prod environment would look like.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ dist: bionic
 services:
   - mysql
 env:
-  - DEVELOPMENT=yes DATABASE_ENGINE=mysql
+  - DEVELOPMENT=no DATABASE_ENGINE=mysql
 
 jobs:
 
