Add form validation for the new BibTexUploadForm. Add some tests to check that BibTexUploadForm works as expected.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-# Web development
+bibtexparser == 1.1.0
 django[argon2] == 3.0.3
 gunicorn == 20.0.4
-
-# Deployment automation
-python-dotenv
-
-#module for handling article tags
-django-taggit
+python-dotenv == 0.11.0
