--- a/env.dist
+++ b/env.dist
@@ -37,21 +37,28 @@ ALLOWED_HOSTS=localhost
 #--------------------------------------------------
 
 # Database engine to use
-# Options: sqlite3|mysql
+# Options: sqlite3|mysql|postgres
 DATABASE_ENGINE=sqlite3
 
-# Parameters to pass to the MariaDB container on startup.
+# Parameters to pass to a MariaDB container on startup.
 # Only applicable if DATABASE_ENGINE=mysql
 # See: hub.docker.com/_/mariadb
-MYSQL_RANDOM_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
+MYSQL_RANDOM_ROOT_PASSWORD=yes
+MYSQL_DATABASE=tecdb
+MYSQL_USER=tec
 MYSQL_PASSWORD=
 
-# Host that the MySQL database is located at. If you're
-# using docker-compose then this should probably be
-# set to "database".
-DATABASE_HOST=
+# Parameters to pass to a Postgres container on startup.
+# Only applicable if DATABASE_ENGINE=postgres.
+# See: https://hub.docker.com/_/postgres/
+POSTGRES_PASSWORD=
+POSTGRES_USER=tec
+POSTGRES_DB=tecdb
+
+# Host that the database is located at. If you're using
+# docker-compose then this should probably be set to
+# "tec-database".
+DATABASE_HOST=tec-database
 
 #--------------------------------------------------
 # Proxy params
