--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ bibtexparser == 1.1.0
 django[argon2] == 3.0.3
 django-compressor == 2.4
 gunicorn == 20.0.4
+psycopg2-binary == 2.8.4
 python-dotenv == 0.11.0
